# animaker

./: README.md  justfile  pyproject.toml  spec.md
animaker/: __init__.py  gui.py  main.py
